React source code & vuex & SSR

--- a/Excalidraw/react 基础 2024-01-07 18.01.18.excalidraw.md
+++ b/Excalidraw/react 基础 2024-01-07 18.01.18.excalidraw.md
@@ -27,7 +27,7 @@ g ->
 h ^qsLHErYe
 
 a 下面有
-b,c,d,f,g,h
+b c d f g h
 层层判断
 发现 f 被
 改成了 e ^K2ZIj25K
@@ -38,7 +38,7 @@ b,c,d,f,g,h
 {
 	"type": "excalidraw",
 	"version": 2,
-	"source": "https://github.com/zsviczian/obsidian-excalidraw-plugin/releases/tag/2.0.14",
+	"source": "https://github.com/zsviczian/obsidian-excalidraw-plugin/releases/tag/2.0.17",
 	"elements": [
 		{
 			"type": "text",
@@ -240,8 +240,8 @@ b,c,d,f,g,h
 		},
 		{
 			"type": "text",
-			"version": 156,
-			"versionNonce": 416651175,
+			"version": 168,
+			"versionNonce": 281737650,
 			"isDeleted": false,
 			"id": "K2ZIj25K",
 			"fillStyle": "solid",
@@ -254,24 +254,24 @@ b,c,d,f,g,h
 			"y": -93.0234375,
 			"strokeColor": "#1e1e1e",
 			"backgroundColor": "#ffec99",
-			"width": 118.6171875,
+			"width": 133.7109375,
 			"height": 168,
 			"seed": 781586441,
 			"groupIds": [],
 			"frameId": null,
 			"roundness": null,
 			"boundElements": [],
-			"updated": 1704622000615,
+			"updated": 1705283573495,
 			"link": null,
 			"locked": false,
 			"fontSize": 28,
 			"fontFamily": 4,
-			"text": "a 下面有\nb,c,d,f,g,h\n层层判断\n发现 f 被\n改成了 e",
-			"rawText": "a 下面有\nb,c,d,f,g,h\n层层判断\n发现 f 被\n改成了 e",
+			"text": "a 下面有\nb c d f g h\n层层判断\n发现 f 被\n改成了 e",
+			"rawText": "a 下面有\nb c d f g h\n层层判断\n发现 f 被\n改成了 e",
 			"textAlign": "left",
 			"verticalAlign": "top",
 			"containerId": null,
-			"originalText": "a 下面有\nb,c,d,f,g,h\n层层判断\n发现 f 被\n改成了 e",
+			"originalText": "a 下面有\nb c d f g h\n层层判断\n发现 f 被\n改成了 e",
 			"lineHeight": 1.2,
 			"baseline": 161
 		}
@@ -291,8 +291,8 @@ b,c,d,f,g,h
 		"currentItemTextAlign": "left",
 		"currentItemStartArrowhead": null,
 		"currentItemEndArrowhead": "arrow",
-		"scrollX": 307.6868131868132,
-		"scrollY": 332.0241243131868,
+		"scrollX": 324.8296703296708,
+		"scrollY": 265.305374313187,
 		"zoom": {
 			"value": 1.05
 		},
